@@ -70,6 +70,22 @@ subtest 'media_type and encoding handlers' => sub {
 
   cmp_deeply($js->get_media_type('tExt/PLaIN')->(\'foo'), \'foo', 'getter uses the casefolded name');
 
+  $js->add_media_type('furble/*' => sub { \1 });
+  cmp_deeply($js->get_media_type('furble/bloop')->(\''), \'1', 'getter matches to wildcard entries');
+
+  $js->add_media_type('text/*' => sub { \'wildcard' });
+  cmp_deeply($js->get_media_type('TExT/plain')->(\'foo'), \'foo', 'getter prefers case-insensitive matches to wildcard entries');
+  cmp_deeply($js->get_media_type('TExT/blop')->(\'foo'), \'wildcard', 'getter matches to wildcard entries');
+  cmp_deeply($js->get_media_type('TExT/*')->(\'foo'), \'wildcard', 'text/* matches itself');
+
+  $js->add_media_type('*/*' => sub { \'wildercard' });
+  cmp_deeply($js->get_media_type('TExT/plain')->(\'foo'), \'foo', 'getter still prefers case-insensitive matches to wildcard entries');
+  cmp_deeply($js->get_media_type('TExT/blop')->(\'foo'), \'wildcard', 'text/* is preferred to */*');
+  cmp_deeply($js->get_media_type('*/*')->(\'foo'), \'wildercard', '*/* matches */*');
+  cmp_deeply($js->get_media_type('fOO/bar')->(\'foo'), \'wildercard', '*/* is returned as a last resort');
+
+  $js = JSON::Schema::Modern->new;
+
   cmp_deeply(
     $js->get_media_type('application/json')->($js->get_encoding('base64')->(\'eyJmb28iOiAiYmFyIn0K')),
     \ { foo => 'bar' },
